[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nostrax"
version = "2.0.0"
description = "Extract URLs and paths from web pages"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "prodrom3" },
]
maintainers = [
    { name = "radamic" },
]
dependencies = [
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
    "defusedxml>=0.7",
    "lxml>=5.0",
]

[project.optional-dependencies]
progress = [
    "tqdm>=4.60",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "aioresponses>=0.7",
    "tqdm>=4.60",
]

[project.scripts]
nostrax = "nostrax.cli:main"

[tool.setuptools.package-data]
nostrax = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
